--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,32 @@
     padding: 10px;
     text-shadow: 1px 1px 1px #fff;
 }
+
+@media screen and (max-width: 400px){
+  #floating-panel {
+    width: 90%;
+    font-size: 10px;
+  }
+   #floating-panel img{
+    max-width: 100px;
+    max-height: 40px;
+   }
+   #floating-panel1 {
+        position: absolute;
+        top: 35%;
+        left: 4%;
+        max-width: 200px;
+        font-size: 9px;
+      }
+  #floating-panel1 img {
+    max-width: 130px;
+    max-height: 80px;
+  }
+
+   .zui-table{
+    font-size: 9px;
+   }
+}
     </style>
   </head>
   <body>
